--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -2,7 +2,7 @@
 
   <!-- home -->
   <ion-fab slot="fixed" horizontal="center" vertical="top">
-    <ion-fab-button (click)="goHome()">
+    <ion-fab-button (click)="fs.goHome()">
       <ion-icon name='home'></ion-icon>
     </ion-fab-button>  
   </ion-fab>
@@ -10,41 +10,29 @@
   <ion-grid>
     <!-- archived track -->
     <ion-row class="centered-content">
+      <div><strong>Current track</strong></div>
     </ion-row>
     <ion-row>
-      <ion-col size="4">
+      <ion-col size="5" offset="2">
         <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Current')">
-          <div class="pick" >CURRENT<br>TRACK</div>
+          <div class="pick" >CHANGE COLOR</div>
         </ion-button>
       </ion-col>  
       <ion-col size="2" offset="1">
         <div class="line" [ngStyle]="{'background-color': currentColor}"></div>
       </ion-col>  
-      <ion-col size="2">
-        <div class ="quest"><strong>??</strong></div>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button (click)="confirm('Current')">
-          <div class="pick" >OK</div>
-        </ion-button>
-      </ion-col>  
+    </ion-row>
+    <ion-row class="centered-content">
+      <div><strong>Reference track</strong></div>
     </ion-row>
     <ion-row>
-      <ion-col size="4">
+      <ion-col size="5" offset="2">
         <ion-button class = 'bigButton' expand = 'block' (click)="selectColor('Archived')">
-          <div class="pick" >ARCHIVED<br>TRACK</div>
+          <div class="pick" >CHANGE COLOR</div>
         </ion-button>
       </ion-col>  
       <ion-col size="2" offset="1">
         <div class="line" [ngStyle]="{'background-color': archivedColor}"></div>
-      </ion-col>  
-      <ion-col size="2">
-        <div class="quest"><strong>??</strong></div>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button (click)="confirm('Archived')">
-          <div class="pick" >OK</div>
-        </ion-button>
       </ion-col>  
     </ion-row>
     <!--
