--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -34,7 +34,7 @@
     </ion-row>
   </ion-fab>
   
-<div id="map"></div>
+<div id="map" class="map-container"></div>
 
 <swiper-container id="data">
   <swiper-slide>
