--- a/src/app/pop-over/pop-over.component.html
+++ b/src/app/pop-over/pop-over.component.html
@@ -4,7 +4,7 @@
   <div class="popup-header">{{ text[0] }}</div>
   <hr class="popup-divider" />
   <div class="popup-body">
-    <p>Altitude: {{ text[2] }} m</p>
+    <p>{{altit}} {{ text[2] }} m</p>
     <p>{{ text[1] }}</p>
   </div>
 </div>
