--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,25 +11,30 @@
         <ion-icon name="play"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='stop' (click)="confirm('stop')">
-        <ion-icon name="stop"></ion-icon>
+        <ion-icon name="pause"></ion-icon>
+      </ion-fab-button>  
+      <ion-fab-button id='alert' (click)="waypoint()">
+        <ion-icon name="alert"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='save' (click)="setTrackDetails()">
         <ion-icon name="save"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='trash' (click)="confirm('delete')">
-        <ion-icon name="trash-outline"></ion-icon>
+        <ion-icon name="trash"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='databutton' (click)="gotoData()">
-        <ion-icon name="analytics-outline"></ion-icon>
+        <ion-icon name="analytics"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='mapbutton' (click)="gotoMap()">
-        <ion-icon name="map-outline"></ion-icon>
-      </ion-fab-button>  
+        <ion-icon name="earth"></ion-icon>
+      </ion-fab-button>
+      <!-- Spacer -->
+      <div style="width: 20px;"></div>
       <ion-fab-button id='list' (click)="gotoPage('tab2')">
-        <ion-icon name="list-outline"></ion-icon>
+        <ion-icon name="list"></ion-icon>
       </ion-fab-button>  
       <ion-fab-button id='settings' (click)="gotoPage('tab3')">
-        <ion-icon name="settings-outline"></ion-icon>
+        <ion-icon name="settings"></ion-icon>
       </ion-fab-button>  
     </ion-row>
   </ion-fab>
